--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "embeddr-cli"
-version = "0.1.0"
+version = "0.1.1"
 description = "Embeddr Local CLI Application"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -17,6 +17,12 @@ dependencies = [
     "embeddr-core>=0.1.3",
     "fastmcp>=2.14.1",
 ]
+
+[project.urls]
+Homepage = "https://github.com/embeddr-net/embeddr-cli"
+Repository = "https://github.com/embeddr-net/embeddr-cli"
+Issues = "https://github.com/embeddr-net/embeddr-cli/issues"
+
 
 [project.optional-dependencies]
 torch = ["torch>=2.9"]
