--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [project]
 name = "embeddr-cli"
-version = "0.1.1"
+version = "0.1.2"
 description = "Embeddr Local CLI Application"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard]>=0.128.0",
-    "numpy>=2.4.0",
-    "pillow>=12.0.0",
-    "pydantic-settings>=2.12.0",
-    "python-multipart>=0.0.21",
-    "sqlmodel>=0.0.29",
-    "transformers>=4.57.3",
-    "typer>=0.21.0",
-    "uvicorn>=0.40.0",
-    "embeddr-core>=0.1.3",
-    "fastmcp>=2.14.1",
+  "fastapi[standard]>=0.128.0",
+  "numpy>=2.4.0",
+  "pillow>=12.0.0",
+  "pydantic-settings>=2.12.0",
+  "python-multipart>=0.0.21",
+  "sqlmodel>=0.0.29",
+  "transformers>=4.57.3",
+  "typer>=0.21.0",
+  "uvicorn>=0.40.0",
+  "embeddr-core>=0.1.3",
+  "fastmcp>=2.14.1",
 ]
 
 [project.urls]
@@ -35,9 +35,7 @@ include-package-data = true
 where = ["src"]
 
 [tool.setuptools.package-data]
-embeddr = [
-  "web/**/*",
-]
+embeddr = ["web/**/*"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
