--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ dependencies = [
   "uvicorn>=0.40.0",
   "embeddr-core>=0.1.5",
   "fastmcp>=2.14.1",
+  "requests>=2.31.0",
+  "httpx>=0.28.1",
+  "einops>=0.8.0",
+  "pyvips>=3.1.1",
+  "pyvips-binary>=8.17.3",
+  "alembic>=1.13.1",
 ]
 
 [project.urls]
