--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "embeddr-cli"
-version = "0.1.3"
+version = "0.1.4"
 description = "Embeddr Local CLI Application"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -22,6 +22,8 @@ dependencies = [
   "pyvips>=3.1.1",
   "pyvips-binary>=8.17.3",
   "alembic>=1.13.1",
+  "toml>=0.10.2",
+  "imagehash>=4.3.1",
 ]
 
 [project.urls]
@@ -32,6 +34,7 @@ Issues = "https://github.com/embeddr-net/embeddr-cli/issues"
 
 [project.optional-dependencies]
 torch = ["torch>=2.9"]
+dev = ["pytest>=8.0.0", "httpx>=0.27.0"]
 
 
 [tool.setuptools]
@@ -41,7 +44,7 @@ include-package-data = true
 where = ["src"]
 
 [tool.setuptools.package-data]
-embeddr = ["web/**/*"]
+embeddr = ["web/**/*", "db/alembic.ini", "db/alembic/**/*"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
