Update version to 0.1.4alpha in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "embeddr-cli"
-version = "0.1.4"
+version = "0.1.4alpha"
 description = "Embeddr Local CLI Application"
 readme = "README.md"
 requires-python = ">=3.12"
